# tdom

./: .gitignore  LICENSE  README.md  TODO.md  config.toml  conftest.py  env.sh  index.html  inspect.py  justfile  local.toml  main.js  main.py  main.toml  micropython.html  offline.html  package-lock.json  package.json  pyproject-playwright.toml  pyproject.toml
.aiassistant/rules/: t-strings.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: build-publish.yml  ci.yml  node.js.yml  pages.yml  playwright.yml  publish.yml  pypi.yml  pytest.yml  test.yml
.junie/: guidelines.md  pep-0750.rst
docs/: benchmark.md  conf.py  container.md  context.md  html_svg.md  index.md  license.md  reference.md  why.md
docs/examples/: components.md  conditionals.md  expressions.md  index.md  looping.md  static_string.md  variables.md
docs/usage/: components.md  conditionals.md  expressions.md  index.md  looping.md  static_string.md
examples/: __init__.py  index.html  test_micropython_examples.py  webapp.py  webapp_browser.py
examples/components/: componentsI.py  componentsJ.py
examples/components/children_props/: __init__.py  test_children_props.py
examples/components/conditional_default/: __init__.py  test_conditional_default.py
examples/components/dataclass_component/: __init__.py  test_callable.py
examples/components/default_component/: __init__.py
examples/components/expression_props/: __init__.py  test_expression_props.py
examples/components/generators/: __init__.py  test_generators.py
examples/components/in_vdom/: __init__.py  test_in_vdom.py
examples/components/optional_props/: __init__.py  test_optional_props.py
examples/components/pass_component/: __init__.py  test_pass_component.py
examples/components/scope_values/: __init__.py  test_scope_values.py
examples/components/simple_heading/: __init__.py
examples/components/simple_props/: __init__.py
examples/components/subcomponents/: __init__.py  test_subcomponents.py
examples/conditionals/syntax/: __init__.py  test_syntax.py
examples/containers/: basic_decorator.py
examples/expressions/call_function/: __init__.py  test_call_function.py
examples/expressions/python_operation/: __init__.py  test_python_operation.py
examples/expressions/simple_arithmetic/: __init__.py  test_simple_arithmetic.py
examples/looping/rendered_looping/: __init__.py
examples/looping/simple_looping/: __init__.py  test_simple_looping.py
examples/static/: config.toml  types.py
examples/static_string/boolean_attribute_value/: __init__.py  test_boolean_attribute_value.py
examples/static_string/child_nodes/: __init__.py  test_child_nodes.py
examples/static_string/doctype/: __init__.py  test_doctype.py
examples/static_string/expressions_as_values/: __init__.py  test_expressions_as_values.py
examples/static_string/shorthand_syntax/: __init__.py  test_shorthand_syntax.py
examples/static_string/show_vdom/: __init__.py  test_show_vdom.py
examples/tdom/: parser.py
public/: config.toml  index.html  micropython.mjs  micropython.wasm
public/tdom/: __init__.py  dom.py  utils.py
src/: index.html  local.toml  main.py  main.toml  micropython.html  test_alien_signals.py
src/alien_signals/: system.py
src/tdom/: __init__.py  __micropython_init__.py  decorators.py  dom.py  fixtures.py  micropython.py  parser.py  tdom.py  utils.py
static/: cmd6.bundle.js  demo.py  html.py  micropython.mjs  micropython.wasm  style.css
static/polyscript/: _template.js  index.js  index.js.map  service-worker.js
tdom/: __init__.py  callables.py  callables_test.py  classnames.py  classnames_test.py  context.py  context_test.py  cvar_utils.py  cvar_utils_test.py  dom.py  escaping.py  escaping_test.py  format.py  format_test.py  htmlspec.py  linter.py  linter_test.py  nodes.py  nodes_test.py  parser.py  parser_test.py  parser_utils.py  placeholders.py  placeholders_test.py  processor.py  processor_context_test.py  processor_extension_test.py  processor_integration_test.py  processor_test.py  processor_to_html_test.py  protocols.py  protocols_test.py  relaxed_parser_processor_test.py  scope.py  scope_test.py  sentinel.py  source.py  svg_test.py  template_utils.py  template_utils_test.py  (+8 more)
tdom/nodes/: __init__.py  nodes.py  nodes_test.py  processor.py  processor_test.py
tdom/profiling/: __init__.py  benchmark.py  benchmark_cache.py  profiler_parser.py  profiler_processor.py
tests/: conftest.py  index.html  index.py  index.spec.js  index.toml  test_basic_container.py  test_basic_middleware.py  test_context.py  test_decorator.py  test_decorators.py  test_demo.py  test_examples.py  test_features.py  test_fixtures.py  test_html.py  test_micropython_examples.py  test_pages.py  test_research_decorators.py  test_single_file.py  test_svcs_container.py  test_svcs_registry.py  test_tdom.py  test_tdom_micropython.py  test_utils.py  test_viewdom_expressions.py  test_viewdom_static_string.py  test_viewdom_variables.py
tests/pwright/: test_fixtures.py  test_pages.py
(+18 files in other folders)
